--- a/index.html
+++ b/index.html
@@ -274,18 +274,9 @@
     </div>
 
     <!-- Cookie alert box -->
-    <div class="alert alert-light fade show position-fixed start-0 bottom-0 z-index-130 shadow p-4 m-3 col-10 col-md-8 col-lg-4 col-xl-3" role="alert">
-        <div class="d-flex justify-content-end">
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-        <div class="text-dark mt-3">
-            <p class="mb-0">Этот веб-сайт использует cookie.<br> <a href="#privacyPolicy" data-bs-toggle="modal" data-bs-target="#privacyPolicy">Политика персональных данных</a>.</p>
-            <div class="mt-3">
-                <button type="button" class="btn btn-primary btn-md mb-2 me-3" data-bs-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">Ок</span>
-                </button>
-            </div>
-        </div>
+    <div class="alert alert-black fade show text-center position-fixed start-0 bottom-0 z-index-130 w-100" role="alert">
+        <p class="mb-0">🍪 Этот веб-сайт использует cookie. <a href="#privacyPolicy" data-bs-toggle="modal" data-bs-target="#privacyPolicy">Подробнее</a> <button type="button" class="btn btn-primary btn-sm align-baseline ms-2" data-bs-dismiss="alert" aria-label="Close"><span aria-hidden="true">Ок</span></button>
+        </p>
     </div>
 
     <script src="js/bootstrap.bundle.min.js"></script>
