--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="offcanvas-header justify-content-end">
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
-                    <div class="offcanvas-body">
+                    <div class="offcanvas-body text-center text-lg-start">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item"><a class="nav-link active" href="#">Веб-студия</a></li>
                             <li class="nav-item"><a class="nav-link" href="#">Создание сайтов</a></li>
@@ -74,7 +74,9 @@
         <section class="section py-md">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6"></div>
+                    <div class="col-lg-6">
+                        <a class="btn btn-primary" href="#">Отправить</a>
+                    </div>
                     <div class="col-lg-6"></div>
                 </div>
             </div>
