--- a/index.html
+++ b/index.html
@@ -71,22 +71,56 @@
     <main class="main">
 
         <!-- HERO -->
-        <section class="section py-md">
+        <section class="section min-h-100vh">
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <a class="btn btn-primary" href="#">Отправить</a>
+                <div class="row g-0">
+                    <div class="col-lg-10">
+                        <span class="fz-15">Разработка сайтов</span>
+                        <h1 class="text-uppercase">Разработка сайтов в Москве</h1>
+                        <div class="swiper heroSwiper">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <a href="#">
+                                        <img class="w-100" src="img/hero-slider-01.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="#">
+                                        <img class="w-100" src="img/hero-slider-01.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="#">
+                                        <img class="w-100" src="img/hero-slider-01.png" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="testimonialSwiper-next swiper-button-next">
+                                <i class='bx bxs-chevron-right'></i>
+                            </div>
+                            <div class="testimonialSwiper-prev swiper-button-prev">
+                                <i class='bx bxs-chevron-left'></i>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-lg-6"></div>
+                    <div class="col-lg-2">
+                        <a class="btn btn-primary" href="#">написать</a>
+                    </div>
                 </div>
             </div>
         </section>
 
         <!-- Выгодная разработка сайта в короткий срок -->
-        <section class="section py-md">
+        <section class="section py-md bg-color-black color-white">
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-6"></div>
+                <div class="row g-4">
+                    <div class="col-lg-6">
+                        <h2 class="h1">Выгодная разработка сайта <span class="color-blue">в короткий срок</span></h2>
+                        <div class="fw-light">
+                            <p>With the right credit card, you can improve your financial life by building credit, earning rewards and saving money. But with hundreds of credit cards on the market.</p>
+                        </div>
+                        <a class="btn btn-secondary" href="#">узнать</a>
+                    </div>
                     <div class="col-lg-6"></div>
                 </div>
             </div>
@@ -277,7 +311,7 @@
 
     <!-- Cookie alert box -->
     <div class="alert alert-black fade show text-center position-fixed start-0 bottom-0 z-index-130 w-100" role="alert">
-        <p class="mb-0">🍪 Этот веб-сайт использует cookie. <a href="#privacyPolicy" data-bs-toggle="modal" data-bs-target="#privacyPolicy">Подробнее</a> <button type="button" class="btn btn-primary btn-sm align-baseline ms-2" data-bs-dismiss="alert" aria-label="Close"><span aria-hidden="true">Ок</span></button>
+        <p class="mb-0">🍪 Этот веб-сайт использует cookie. <a href="#privacyPolicy" data-bs-toggle="modal" data-bs-target="#privacyPolicy">Подробнее</a> <button type="button" class="btn btn-secondary btn-sm align-baseline ms-2" data-bs-dismiss="alert" aria-label="Close"><span aria-hidden="true">Ок</span></button>
         </p>
     </div>
 
