--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
                     </div>
                     <div class="col-lg-2">
                         <div class="d-flex flex-column justify-content-center align-items-center h-100 pt-4 pt-lg-0">
-                            <a class="btn btn-primary btn-hero" href="#">написать</a>
+                            <a class="btn btn-primary btn-hero" href="#mainForm" data-bs-toggle="modal"
+                                data-bs-target="#mainForm">написать</a>
                             <div class="bg-btn-hero bg-color-black"></div>
                         </div>
                     </div>
@@ -129,7 +130,8 @@
                         <a class="btn btn-secondary mt-5" href="#">узнать</a>
                     </div>
                     <div class="col-lg-5 offset-lg-1">
-                        <div class="swiper priceSwiper overflow-hidden w-100 ms-n2 ms-md-0 pe-3 pe-sm-4" style="max-height: 405px;">
+                        <div class="swiper priceSwiper overflow-hidden w-100 ms-n2 ms-md-0 pe-3 pe-sm-4"
+                            style="max-height: 405px;">
                             <div class="swiper-wrapper pe-md-2">
                                 <div class="swiper-slide h-auto px-2">
 
@@ -143,7 +145,8 @@
                                                         <a href="#" class="stretched-link">Сайт-визитка от 35 900₽</a>
                                                     </p>
                                                     <div class="fw-light">
-                                                        <p>The best credit cards offer some tantalizing combinations of promotions and prizes</p>
+                                                        <p>The best credit cards offer some tantalizing combinations of
+                                                            promotions and prizes</p>
                                                     </div>
                                                 </div>
                                             </article>
@@ -157,7 +160,8 @@
                                                         <a href="#" class="stretched-link">Корпоративный от 75 900₽</a>
                                                     </p>
                                                     <div class="fw-light">
-                                                        <p>We take proactive steps make sure your information and transactions are secure.</p>
+                                                        <p>We take proactive steps make sure your information and
+                                                            transactions are secure.</p>
                                                     </div>
                                                 </div>
                                             </article>
@@ -168,10 +172,12 @@
                                             <article class="card card-hover-dark h-100 border-0">
                                                 <div class="card-body">
                                                     <p class="h3">
-                                                        <a href="#" class="stretched-link">Интернет-магазин от 120 000₽</a>
+                                                        <a href="#" class="stretched-link">Интернет-магазин от 120
+                                                            000₽</a>
                                                     </p>
                                                     <div class="fw-light">
-                                                        <p>The best credit cards offer some tantalizing combinations of promotions and prizes</p>
+                                                        <p>The best credit cards offer some tantalizing combinations of
+                                                            promotions and prizes</p>
                                                     </div>
                                                 </div>
                                             </article>
@@ -185,7 +191,8 @@
                                                         <a href="#" class="stretched-link">Сайт-визитка от 35 900₽</a>
                                                     </p>
                                                     <div class="fw-light">
-                                                        <p>The best credit cards offer some tantalizing combinations of promotions and prizes</p>
+                                                        <p>The best credit cards offer some tantalizing combinations of
+                                                            promotions and prizes</p>
                                                     </div>
                                                 </div>
                                             </article>
@@ -199,7 +206,8 @@
                                                         <a href="#" class="stretched-link">Корпоративный от 75 900₽</a>
                                                     </p>
                                                     <div class="fw-light">
-                                                        <p>We take proactive steps make sure your information and transactions are secure.</p>
+                                                        <p>We take proactive steps make sure your information and
+                                                            transactions are secure.</p>
                                                     </div>
                                                 </div>
                                             </article>
@@ -210,10 +218,12 @@
                                             <article class="card card-hover-dark h-100 border-0">
                                                 <div class="card-body">
                                                     <p class="h3">
-                                                        <a href="#" class="stretched-link">Интернет-магазин от 120 000₽</a>
+                                                        <a href="#" class="stretched-link">Интернет-магазин от 120
+                                                            000₽</a>
                                                     </p>
                                                     <div class="fw-light">
-                                                        <p>The best credit cards offer some tantalizing combinations of promotions and prizes</p>
+                                                        <p>The best credit cards offer some tantalizing combinations of
+                                                            promotions and prizes</p>
                                                     </div>
                                                 </div>
                                             </article>
@@ -271,7 +281,8 @@
         </section>
 
         <!-- Цены на создание сайтов под ключ  -->
-        <section class="section dark-mode py-5 bg-color-black color-white bg-img min-vh-100" style="background-image: url(img/bg-price.png);">
+        <section class="section dark-mode py-5 bg-color-black color-white bg-img min-vh-100"
+            style="background-image: url(img/bg-price.png);">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col text-center">
@@ -279,7 +290,36 @@
                     </div>
                 </div>
                 <div class="row g-4">
-                    <div class="col-lg-4"></div>
+                    <div class="col-lg-4">
+                        <div class="card card-pricing h-100">
+                            <div class="card-body">
+                                <p>Тариф «Минимальный»</p>
+                                <p>CMS: Wordpress, OpenCart или ModX</p>
+                                <p>22 950 ₽</p>
+                                <ul>
+                                    <li>Домен (.ru/.рф)</li>
+                                    <li>Хостинг на 3 месяца</li>
+                                    <li>Готовый дизайн</li>
+                                    <li>CMS система управления сайтом</li>
+                                    <li>Неограниченое количество страниц</li>
+                                    <li>Наполнение до 25 страниц</li>
+                                    <li>Каталог товаров или услуг</li>
+                                    <li>Наполнение каталого до 25 позиций</li>
+                                    <li>Стандартная карточка товара</li>
+                                    <li>Регистрация и кабинет покупателя</li>
+                                    <li>Корзина товаров</li>
+                                    <li>Форма обратной связи</li>
+                                    <li>Новостная лента</li>
+                                    <li>SEO-панель для продвижения</li>
+                                    <li>Регистрация в поисковых системах</li>
+                                </ul>
+                                <p>Срок от 5 дней</p>
+                                <p>*В случае задержки предоставления материалов от Заказчика, срок разработки
+                                    увеличивается.</p>
+                                <a class="btn btn-secondary" href="#">Выбрать</a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-4"></div>
                     <div class="col-lg-4"></div>
                 </div>
@@ -341,79 +381,44 @@
         <i class="bx bx-up-arrow-alt"></i>
     </button>
 
-    <!-- Modal after Action -->
-    <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop">
-        <div class="offcanvas-header justify-content-end">
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-            <div class="container">
-                <div class="row g-4">
-                    <div class="col-lg-4">
-                        <div class="p-lg-4">
-                            <p class="fz-32 fw-600">Напишите нам</p>
-                            <p class="fz-22">Кратко опишите свою задачу, и мы свяжемся с вами в кратчайшие сроки.</p>
+    <!-- Modal Main Form -->
+    <div class="modal modal-mainForm fade" id="mainForm" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-md">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Закажи сайт для своего бизнеса</p>
+                    <p>Наши менеджеры свяжутся с Вами в ближайшее время</p>
+                    <form class="needs-validation" novalidate>
+                        <div class="mb-4">
+                            <label for="fname" class="form-label">Имя</label>
+                            <input type="text" id="fname" class="form-control" required="">
+                            <div class="invalid-feedback">Пожалуйста, введите ваше имя!</div>
                         </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="p-lg-4">
-                            <form class="form-contact" action="#" method="post">
-                                <div class="mb-3">
-                                    <label class="form-label d-none">Имя</label>
-                                    <input type="text" class="form-control" placeholder="Имя">
-                                </div>
-                                <div class="mb-3">
-                                    <label class="form-label d-none">Телефон</label>
-                                    <input type="text" class="form-control" placeholder="Телефон">
-                                </div>
-                                <div class="mb-3">
-                                    <label class="form-label d-none">Email</label>
-                                    <input type="email" class="form-control" placeholder="Email">
-                                </div>
-                                <div class="mb-3">
-                                    <select class="form-select">
-                                        <option selected>Бюджет</option>
-                                        <option value="1">до 500 тыс. рублей</option>
-                                        <option value="2">до 1 млн рублей</option>
-                                        <option value="3">от 1 млн до 2 млн рублей</option>
-                                        <option value="3">более 5 млн рублей</option>
-                                    </select>
-                                </div>
-                                <div class="mb-3">
-                                    <label class="form-label d-none">Сообщение</label>
-                                    <textarea class="form-control" rows="3" placeholder="Сообщение"></textarea>
-                                </div>
-                                <button type="submit" class="btn btn-primary btn-md w-100">Отправить</button>
-                                <p class="fz-14 mt-3">Нажимая на кнопку, вы соглашаетесь с <a href="#privacyPolicy"
-                                        data-bs-toggle="modal" data-bs-target="#privacyPolicy">Политикой персональных
-                                        данных</a></p>
-                            </form>
+                        <div class="mb-4">
+                            <label for="phone" class="form-label">Телефон</label>
+                            <input type="text" id="phone" class="form-control" placeholder="+7 (___) ___-__-__">
                         </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="p-lg-4">
-                            <div class="fw-600 mb-5">
-                                <p class="fz-20 mb-1">Контакты:</p>
-                                <ul class="list-unstyled">
-                                    <li><a href="mailto:support@amdmedia.ru">support@amdmedia.ru</a></li>
-                                    <li><a href="tel:+74951595901">+7 (495) 159-59-01</a></li>
-                                </ul>
-                            </div>
-                            <div class="fw-600 mb-5">
-                                <p class="fz-20 mb-1">Наш адрес:</p>
-                                <p>117638 Россия, Москва,<br>
-                                    Одесская улица, 2кС</p>
-                            </div>
-                            <ul class="list-inline mb-5">
-                                <li class="list-inline-item"><a class="hover-opacity" href="#"><img
-                                            src="img/icon-vk.svg" alt=""></a></li>
-                                <li class="list-inline-item"><a class="hover-opacity" href="#"><img
-                                            src="img/icon-telegram.svg" alt=""></a></li>
-                                <li class="list-inline-item"><a class="hover-opacity" href="#"><img
-                                            src="img/icon-wa.svg" alt=""></a></li>
-                            </ul>
+                        <div class="mb-4">
+                            <label for="method" class="form-label">Способ связи</label>
+                            <select id="method" class="form-select">
+                                <option value="phone">Телефон</option>
+                                <option value="wa">What's App</option>
+                                <option value="telegram">Telegram</option>
+                                <option value="viber">Viber</option>
+                            </select>
                         </div>
-                    </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="ex-check-2" checked>
+                            <label class="form-check-label" for="ex-check-2">Я согласен(а) с <a href="#privacyPolicy" data-bs-toggle="modal" data-bs-target="#privacyPolicy">политикой обработки персональных данных</a></label>
+                        </div>
+                        <div class="text-center mt-2 mt-md-3 mt-lg-4">
+                            <button type="submit" class="btn btn-primary">Оставить заявку</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -429,8 +434,10 @@
                 <div class="modal-body">
                     <p class="fs-2">Политика конфиденциальности</p>
                     <p>1. Принимая условия настоящего Соглашения, Пользователь даёт своё согласие Администрации сайта
-                        https://amdmedia.ru (далее — Администрация) на сбор, хранение и обработку своих персональных
-                        данных, указанных путём заполнения веб-форм на сайте https://amdmedia.ru (далее — Сайт). Под
+                        https://startsite.studio (далее — Администрация) на сбор, хранение и обработку своих
+                        персональных
+                        данных, указанных путём заполнения веб-форм на сайте https://startsite.studio (далее — Сайт).
+                        Под
                         персональными данными понимается любая информация, относящаяся к прямо или косвенно
                         определённому или определяемому физическому лицу (гражданину).</p>
                     <p>2. Пользователь также даёт своё согласие Администрации на отправку маркетинговых и информационных
@@ -460,7 +467,8 @@
     </div>
 
     <!-- Cookie alert box -->
-    <div class="alert dark-mode alert-black fade show text-center position-fixed start-0 bottom-0 z-index-130 w-100" role="alert">
+    <div class="alert dark-mode alert-black fade show text-center position-fixed start-0 bottom-0 z-index-130 w-100"
+        role="alert">
         <p class="mb-0">🍪 Этот веб-сайт использует cookie. <a href="#privacyPolicy" data-bs-toggle="modal"
                 data-bs-target="#privacyPolicy">Подробнее</a> <button type="button"
                 class="btn btn-secondary btn-sm align-baseline ms-2" data-bs-dismiss="alert" aria-label="Close"><span
